# photo-transfer-wizard

./: LICENSE  README.md  dev.supposedlysentient.PhotoTransferWizard.json  meson.build
data/: dev.supposedlysentient.PhotoTransferWizard.desktop.in  dev.supposedlysentient.PhotoTransferWizard.gschema.xml  dev.supposedlysentient.PhotoTransferWizard.metainfo.xml.in  dev.supposedlysentient.PhotoTransferWizard.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  photo-transfer-wizard.gresource.xml  photo-transfer-wizard.in  window.py  window.ui
